# sdp-transform

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
sdp_transform/: __init__.py  __version__.py  grammar.py  parser.py  writer.py
tests/: __init__.py
tests/sdps/: rtcp-fb.sdp
