[tool.poetry]
name = "sdp-transform"
version = "1.1.0"
description = "A simple Python parser and writer of SDP."
authors = ["Jiang Yue <maze1024@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/skymaze/sdp-transform"

[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
